feat: Creación de nuevo endpoint Delete para manejar la eliminación de la auditoria udistrital/sisifo_documentacion#554
