# swagger/swagger.yaml
@@ -128,6 +128,31 @@ paths:
           description: Sin resultados.
       summary: Obtener todas las auditorías
       tags: *ref_1
+  /auditoria/{id}/{planId}:
+    delete:
+      operationId: AuditoriaController_delete
+      parameters:
+        - name: id
+          required: true
+          in: path
+          description: ID de auditoría.
+          schema:
+            type: string
+        - name: planId
+          required: true
+          in: path
+          description: ID del plan de auditoría.
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Auditoría eliminada.
+        '400':
+          description: Parámetros inválidos.
+        '500':
+          description: Error interno.
+      summary: Eliminar auditoría lógicamente
+      tags: *ref_1
   /auditoria/{id}:
     get:
       operationId: AuditoriaController_getById
